# AteltaStream

./: .gitattributes  .gitignore  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
app/: app.py
configs/: EnvConfig.py
docs/: Makefile  conf.py  index.rst  make.bat
notebooks/: Connection and Pose extraction.ipynb  Pose align .ipynb  Starter Notebook.ipynb  bailey and kida.ipynb
src/sdk/: preprocess_stream.py  two_video_stream.py  utils.py  youtube_download.py
