[tool.poetry]
name = "ateltastream"
version = "0.1.0"
description = "Compare two video streams"
authors = ["Anindyadeep and John Robert"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.17.0"
pytube = "^12.1.2"
opencv-python = "^4.7.0.68"
mediapipe = "^0.9.0.1"
tqdm = "^4.64.1"
stqdm = "^0.0.5"
python-vlc = "^3.0.18121"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
